Fixed Header overlap on FAQ title

--- a/CSS/faqstyles.css
+++ b/CSS/faqstyles.css
@@ -34,7 +34,7 @@
 }
 
 section#main-faq {
-  padding-top: 15vh;
+  padding-top: 160px;
 }
 
 body#faq {
